tdf#147258 DOCX import: fix bad char format w/ inline <w:sdt> and data binding

The bugdoc had an inline SDT in placeholder mode, where the placeholder
had a char style to define a red text color. This red color is not in
Word, but it was in Writer.

This went wrong with commit de90c192cb8f1f03a4028493d8bfe9a127a76b2a (sw
content controls, plain text: enable DOCX filter with data binding,
2022-09-19), because previously we didn't map <w:sdt> to Writer content
controls for plain text with data binding.

Fix the problem by resetting the char style back to default when the
value of the content control comes from data binding.

Interestingly office.com renders the document the way Writer did
previously, but let's try to match what desktop Word does, that's
probably the reference for DOCX files.

Change-Id: I7eccdb843d5ab63ccf573644c61832e2ef7dae14
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147088
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins